src/test/deca/context/valid/Obj/set-get-public.deca
// Description:
//    assign d'un champ public dans le main
//
// Résultat:
//    Succès
//
class A {
    int n;
}
{
    A a;
    int m;
    a.n = 10;
    m = a.n;
}