src/test/deca/context/invalid/Obj/select-null.deca
// Description:
//    Selection d'un champ ou d'une méthode de null
//
// Résultat:
//Ne doit pas passer
//
{
    int a = null.x;
}